@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.action.fieldcaps;
@@ -51,9 +40,9 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
 
     public void testBuilder() {
         FieldCapabilities.Builder builder = new FieldCapabilities.Builder("field", "type");
-        builder.add("index1", true, false, Collections.emptyMap());
-        builder.add("index2", true, false, Collections.emptyMap());
-        builder.add("index3", true, false, Collections.emptyMap());
+        builder.add("index1", false, true, false, Collections.emptyMap());
+        builder.add("index2", false, true, false, Collections.emptyMap());
+        builder.add("index3", false, true, false, Collections.emptyMap());
 
         {
             FieldCapabilities cap1 = builder.build(false);
@@ -75,9 +64,9 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
         }
 
         builder = new FieldCapabilities.Builder("field", "type");
-        builder.add("index1", false, true, Collections.emptyMap());
-        builder.add("index2", true, false, Collections.emptyMap());
-        builder.add("index3", false, false, Collections.emptyMap());
+        builder.add("index1", false, false, true, Collections.emptyMap());
+        builder.add("index2", false, true, false, Collections.emptyMap());
+        builder.add("index3", false, false, false, Collections.emptyMap());
         {
             FieldCapabilities cap1 = builder.build(false);
             assertThat(cap1.isSearchable(), equalTo(false));
@@ -98,9 +87,9 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
         }
 
         builder = new FieldCapabilities.Builder("field", "type");
-        builder.add("index1", true, true, Collections.emptyMap());
-        builder.add("index2", true, true, Map.of("foo", "bar"));
-        builder.add("index3", true, true, Map.of("foo", "quux"));
+        builder.add("index1", false, true, true, Collections.emptyMap());
+        builder.add("index2", false, true, true, Map.of("foo", "bar"));
+        builder.add("index3", false, true, true, Map.of("foo", "quux"));
         {
             FieldCapabilities cap1 = builder.build(false);
             assertThat(cap1.isSearchable(), equalTo(true));
@@ -158,7 +147,7 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
         }
 
         return new FieldCapabilities(fieldName,
-            randomAlphaOfLengthBetween(5, 20), randomBoolean(), randomBoolean(),
+            randomAlphaOfLengthBetween(5, 20), randomBoolean(), randomBoolean(), randomBoolean(),
             indices, nonSearchableIndices, nonAggregatableIndices, meta);
     }
 
@@ -166,13 +155,14 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
     protected FieldCapabilities mutateInstance(FieldCapabilities instance) {
         String name = instance.getName();
         String type = instance.getType();
+        boolean isMetadataField = instance.isMetadataField();
         boolean isSearchable = instance.isSearchable();
         boolean isAggregatable = instance.isAggregatable();
         String[] indices = instance.indices();
         String[] nonSearchableIndices = instance.nonSearchableIndices();
         String[] nonAggregatableIndices = instance.nonAggregatableIndices();
         Map<String, Set<String>> meta = instance.meta();
-        switch (between(0, 7)) {
+        switch (between(0, 8)) {
         case 0:
             name += randomAlphaOfLengthBetween(1, 10);
             break;
@@ -236,9 +226,13 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
             }
             meta = newMeta;
             break;
+        case 8:
+            isMetadataField = isMetadataField == false;
+            break;
         default:
             throw new AssertionError();
         }
-        return new FieldCapabilities(name, type, isSearchable, isAggregatable, indices, nonSearchableIndices, nonAggregatableIndices, meta);
+        return new FieldCapabilities(name, type, isMetadataField, isSearchable, isAggregatable,
+            indices, nonSearchableIndices, nonAggregatableIndices, meta);
     }
 }
